--- a/res/layout/view_zenoss_device_list_twopane.xml
+++ b/res/layout/view_zenoss_device_list_twopane.xml
@@ -25,7 +25,7 @@
         android:name="net.networksaremadeofstring.rhybudd.ViewZenossDeviceListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="@dimen/FragmentMargins"
         android:layout_weight="1"
         android:tag="ListofDevices"
         tools:layout="@android:layout/list_content" />
