--- a/res/values/tag_ids.xml
+++ b/res/values/tag_ids.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="EventID">0</integer>
+   <!-- <integer name="EventID">0</integer>
     <integer name="EventPositionInList">1</integer>
     
-    <integer name="DeviceUID">2</integer>
+    <integer name="DeviceUID">2</integer>-->
 </resources>
