--- a/res/layout-sw600dp-land/rhybudd_home.xml
+++ b/res/layout-sw600dp-land/rhybudd_home.xml
@@ -1,9 +1,16 @@
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/background_gradient_3" >
-
+        android:background="@drawable/background_gradient_3">
+
+
+
 <ListView
     android:id="@+id/ZenossEventsList"
     android:layout_width="match_parent"
@@ -15,14 +22,18 @@
 
 </ListView>
 
-<ProgressBar
+
+<ProgressBar
     android:id="@+id/backgroundWorkingProgressBar"
     style="?android:attr/progressBarStyleSmall"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true" />
-
+
+
+
+
 <ImageView
     android:id="@+id/imageView1"
     android:layout_width="wrap_content"
@@ -32,7 +43,11 @@
     android:layout_alignWithParentIfMissing="true"
     android:layout_toLeftOf="@+id/EventDetailsFragment"
     android:src="@drawable/zenoss_3" />
-
+
+
+
+
+
 <FrameLayout
     android:id="@+id/EventDetailsFragment"
     android:layout_width="480dp"
@@ -47,3 +62,12 @@
 </FrameLayout>
 
     </RelativeLayout>
+    <ListView android:id="@+id/left_drawer"
+              android:layout_width="240dp"
+              android:layout_height="match_parent"
+              android:layout_gravity="start"
+              android:choiceMode="singleChoice"
+              android:divider="@android:color/transparent"
+              android:dividerHeight="0dp"
+              android:background="#111"/>
+</android.support.v4.widget.DrawerLayout>
