--- a/res/layout/fragment_push_first_settings.xml
+++ b/res/layout/fragment_push_first_settings.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:text="@string/PushAddExistingButton"
         android:id="@+id/setPushIDButton"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="@dimen/SettingsTopMargin"
         android:layout_below="@+id/pushSummary"
         style="@style/ButtonText"
         android:background="@drawable/dark_blue_button"/>
@@ -42,10 +42,10 @@
         android:layout_alignParentRight="true"
         android:visibility="invisible"
         android:hint="@string/PushKeyHint"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"/>
+        android:layout_marginTop="@dimen/SettingsTopMargin"
+        android:layout_marginBottom="@dimen/SettingsTopMargin"
+        android:layout_marginLeft="@dimen/SettingsMargin"
+        android:layout_marginRight="@dimen/SettingsMargin"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -58,8 +58,8 @@
         android:gravity="center_horizontal"
         android:visibility="invisible"
         android:autoLink="web"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"/>
+        android:paddingLeft="@dimen/SettingEditPadding"
+        android:paddingRight="@dimen/SettingEditPadding"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -80,7 +80,7 @@
         android:layout_centerVertical="true"
         android:layout_alignRight="@+id/pushKeyEditText"
         android:layout_below="@+id/pushKeyEditText"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/SettingsTopMargin"
         android:visibility="gone"
         style="@style/ButtonText"
         android:background="@drawable/light_blue_button"
@@ -103,7 +103,7 @@
         android:layout_centerHorizontal="true"
         style="@style/ButtonText"
         android:background="@drawable/light_blue_button"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/SettingsMargin"
         android:visibility="visible"/>
 
 </RelativeLayout>
