--- a/res/layout/fragment_zaas_first_settings.xml
+++ b/res/layout/fragment_zaas_first_settings.xml
@@ -14,30 +14,13 @@
         android:isScrollContainer="true"
         android:scrollbars="vertical" >
 
-        <TextView
-            android:id="@+id/URLLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="6dp"
-            android:layout_marginTop="6dp"
-            android:shadowColor="#505050"
-            android:shadowDx="1"
-            android:shadowDy="1"
-            android:shadowRadius="1"
-            android:text="Zenoss URL:"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:visibility="gone" >
-        </TextView>
-
         <EditText
             android:id="@+id/ZenossURL"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/URLLabel"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginLeft="@dimen/SettingsMargin"
+            android:layout_marginTop="@dimen/SettingsMargin"
             android:hint="subdomain"
             android:inputType="textUri"
             android:layout_toLeftOf="@+id/textView">
@@ -52,8 +35,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/ZenossURL"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="@dimen/SettingsMargin"
+            android:layout_marginRight="@dimen/SettingsMargin"
             android:layout_marginTop="6dp"
             android:hint="@string/UserNameHint"
             android:inputType="textPersonName" >
@@ -66,8 +49,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/ZenossUserName"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="@dimen/SettingsMargin"
+            android:layout_marginRight="@dimen/SettingsMargin"
             android:hint="@string/PasswordHint"
             android:inputType="textPassword" >
 
@@ -101,8 +84,8 @@
             android:id="@+id/debugOutput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:paddingTop="8dp"
+            android:paddingBottom="@dimen/SettingsMargin"
+            android:paddingTop="@dimen/SettingsMargin"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="@color/WarningRed"
             android:layout_alignParentBottom="false"
