--- a/res/layout/manage_database.xml
+++ b/res/layout/manage_database.xml
@@ -10,11 +10,15 @@
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentLeft="true"
 	    android:text="@string/mangeDatabaseDBSizeTitle"
-	    android:textAppearance="?android:attr/textAppearanceMedium" >
+	    android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="12dp">
 </TextView>
 	<TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignBaseline="@+id/sizeLabel" android:layout_alignBottom="@+id/sizeLabel" android:layout_toRightOf="@+id/sizeLabel" android:layout_marginLeft="22dp" android:id="@+id/dbSize" android:text="0bytes"></TextView>
-
+
+
 	<ImageView
+        style="?android:borderlessButtonStyle"
 	    android:id="@+id/refreshCacheImageView"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
@@ -26,7 +30,8 @@
 	    android:src="@drawable/ic_menu_refresh" >
 
 </ImageView>
-
+
+
 	<TextView
 	    android:id="@+id/refreshDesc"
 	    android:layout_width="wrap_content"
@@ -34,7 +39,7 @@
 	    android:layout_alignLeft="@+id/RefreshLabel"
 	    android:layout_below="@+id/RefreshLabel"
 	    android:layout_marginLeft="8dp"
-	    android:layout_marginRight="8dp"
+	    android:layout_marginRight="16dp"
 	    android:text="@string/refreshDesc"
 	    android:textAppearance="?android:attr/textAppearanceSmall"
 	    android:textColor="@color/RhybuddStdText" >
@@ -54,12 +59,13 @@
 </TextView>
 
 	<ImageView
+        style="?android:borderlessButtonStyle"
 	    android:id="@+id/moveToSDImageView"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/refreshCacheImageView"
 	    android:layout_below="@+id/refreshDesc"
-	    android:layout_marginTop="10dp"
+	    android:layout_marginTop="20dp"
 	    android:contentDescription="@string/mgeDBSDCard"
 	    android:src="@drawable/ic_menu_movesd" >
 </ImageView>
@@ -75,7 +81,8 @@
 	    android:textColor="@color/RhybuddTitleText"
 	    android:textStyle="bold" >
 </TextView>
-
+
+
 	<TextView
 	    android:id="@+id/moveToSDDesc"
 	    android:layout_width="wrap_content"
@@ -83,7 +90,7 @@
 	    android:layout_alignLeft="@+id/moveToSDLabel"
 	    android:layout_below="@+id/moveToSDLabel"
 	    android:layout_marginLeft="8dp"
-	    android:layout_marginRight="8dp"
+	    android:layout_marginRight="16dp"
 	    android:text="@string/moveToSDDesc"
 	    android:textAppearance="?android:attr/textAppearanceSmall"
 	    android:textColor="@color/RhybuddStdText" >
@@ -91,12 +98,13 @@
 </TextView>
 
 	<ImageView
+        style="?android:borderlessButtonStyle"
 	    android:id="@+id/emptyDBImageView"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/moveToSDImageView"
 	    android:layout_below="@+id/moveToSDDesc"
-	    android:layout_marginTop="10dp"
+	    android:layout_marginTop="20dp"
 	    android:contentDescription="@string/mgeDBBin"
 	    android:src="@drawable/ic_menu_empty_db" >
 </ImageView>
@@ -112,7 +120,8 @@
 	    android:textColor="@color/RhybuddTitleText"
 	    android:textStyle="bold" >
 </TextView>
-
+
+
 	<TextView
 	    android:id="@+id/emptyCacheDesc"
 	    android:layout_width="wrap_content"
@@ -120,7 +129,7 @@
 	    android:layout_alignLeft="@+id/emptyDBLabel"
 	    android:layout_below="@+id/emptyDBLabel"
 	    android:layout_marginLeft="8dp"
-	    android:layout_marginRight="8dp"
+	    android:layout_marginRight="16dp"
 	    android:text="@string/emptyCacheDesc"
 	    android:textAppearance="?android:attr/textAppearanceSmall"
 	    android:textColor="@color/RhybuddStdText" >
