--- a/res/layout/rhybudd_home.xml
+++ b/res/layout/rhybudd_home.xml
@@ -1,6 +1,10 @@
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
+    <RelativeLayout android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@drawable/background_gradient_3" >
 
@@ -38,3 +42,13 @@
     android:src="@drawable/zenoss_3" />
 
     </RelativeLayout>
+    <!-- The navigation drawer -->
+    <ListView android:id="@+id/left_drawer"
+              android:layout_width="240dp"
+              android:layout_height="match_parent"
+              android:layout_gravity="start"
+              android:choiceMode="singleChoice"
+              android:divider="@android:color/transparent"
+              android:dividerHeight="0dp"
+              android:background="#111"/>
+</android.support.v4.widget.DrawerLayout>
