--- a/res/layout-sw600dp-land/rhybudd_home.xml
+++ b/res/layout-sw600dp-land/rhybudd_home.xml
@@ -2,7 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/FlatGray">
 
     <RelativeLayout
         android:layout_width="fill_parent"
