--- a/res/layout/rhybudd_home.xml
+++ b/res/layout/rhybudd_home.xml
@@ -2,44 +2,40 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/FlatGray">
 
-    <RelativeLayout android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="@drawable/background_gradient_3" >
-
-
-<ListView
-    android:id="@+id/ZenossEventsList"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true"
-    android:cacheColorHint="@color/RhybuddWhite" >
-
-</ListView>
-
-<ProgressBar
-    android:id="@+id/backgroundWorkingProgressBar"
-    style="?android:attr/progressBarStyleSmall"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
 
+        <ListView
+            android:id="@+id/ZenossEventsList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:cacheColorHint="@color/RhybuddWhite" >
 
+        </ListView>
 
+        <ProgressBar
+            android:id="@+id/backgroundWorkingProgressBar"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
 
-
-<ImageView
-    android:id="@+id/imageView1"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentRight="true"
-    android:contentDescription="@string/homeLogos"
-    android:src="@drawable/zenoss_3" />
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:contentDescription="@string/homeLogos"
+            android:src="@drawable/zenoss_3" />
 
     </RelativeLayout>
     <!-- The navigation drawer -->
