new Events List style

--- a/res/layout/view_zenoss_event.xml
+++ b/res/layout/view_zenoss_event.xml
@@ -59,7 +59,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/ackIcon"
-            android:src="@drawable/ic_unacknowledged"/>
+            android:src="@drawable/ic_unacknowledged"
+            />
     </FrameLayout>
 
     <FrameLayout
