--- a/res/layout/dream_grid_item.xml
+++ b/res/layout/dream_grid_item.xml
@@ -3,7 +3,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/gridItemContainer">
+                android:id="@+id/gridItemContainer"
+                android:padding="4dp">
 
     <ImageView
         android:layout_width="fill_parent"
