--- a/res/layout/zenoss_widget.xml
+++ b/res/layout/zenoss_widget.xml
@@ -1,10 +1,30 @@
-<LinearLayout android:id="@+id/linearLayout1" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:gravity="center_vertical|center_horizontal" android:layout_height="wrap_content" android:background="@drawable/widget_background">
-    <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/CriticalImage" android:src="@drawable/severity_critical"></ImageView>
-    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/CriticalCount" android:text="0" android:layout_marginRight="20px" android:textColor="#FF00"></TextView>
-    
-    <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/ErrorImage" android:src="@drawable/severity_error"></ImageView>
-    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:text="0" android:layout_marginRight="20px" android:id="@+id/ErrorCount" android:textColor="#FF6600"></TextView>
-    
-    <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/WarningImage" android:src="@drawable/severity_warning"></ImageView>
-    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:text="0" android:layout_marginRight="20px" android:id="@+id/WarningCount" android:textColor="#FFE303"></TextView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/linearLayout1"
+              android:layout_centerHorizontal="true"
+              android:divider="@drawable/vert_split"
+              android:dividerPadding="8dp"
+              android:showDividers="middle"
+              android:paddingLeft="8dp"
+              android:paddingRight="8dp"
+              android:background="@drawable/event_details_meta_container"
+              android:layout_marginBottom="8dp"
+              android:layout_marginTop="8dp">
+
+<TextView android:layout_width="wrap_content" android:drawableLeft="@drawable/ic_critical" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/CriticalCount" android:text="0" android:layout_marginRight="20px" android:textColor="#FF00"
+          android:paddingLeft="8dp"
+          android:textSize="18sp"
+          android:gravity="center_vertical"
+          android:minWidth="40dp"></TextView>
+
+<TextView android:layout_width="wrap_content" android:drawableLeft="@drawable/ic_error" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:text="0" android:layout_marginRight="20px" android:id="@+id/ErrorCount" android:textColor="#ff8800"
+          android:paddingLeft="8dp"
+          android:textSize="18sp"
+          android:gravity="center_vertical"
+          android:minWidth="40dp"></TextView>
+
+<TextView android:layout_width="wrap_content" android:drawableLeft="@drawable/ic_warning" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:text="0" android:layout_marginRight="20px" android:id="@+id/WarningCount" android:textColor="#ffbb33"
+          android:paddingLeft="8dp"
+          android:textSize="18sp"
+          android:gravity="center_vertical"
+          android:minWidth="40dp"
+          android:singleLine="true"></TextView>
 </LinearLayout>
