--- a/res/xml/zenoss_widget.xml
+++ b/res/xml/zenoss_widget.xml
@@ -1,7 +1,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="144dp"
+    android:minWidth="200dp"
     android:minHeight="36dp"
     android:updatePeriodMillis="900000"
     android:label="Rhybudd - Event Counts"
-    android:initialLayout="@layout/zenoss_widget">
+    android:initialLayout="@layout/zenoss_widget"
+    android:previewImage="@drawable/widget_preview_event_count"
+    android:widgetCategory="keyguard|home_screen">
 </appwidget-provider>
