--- a/res/menu/home_menu.xml
+++ b/res/menu/home_menu.xml
@@ -2,5 +2,5 @@
     <item android:id="@+id/resolveall" android:title="Resolve All" android:showAsAction="always" android:titleCondensed="Resolve" android:icon="@drawable/ic_action_resolve_all"></item>
     <item android:id="@+id/escalate" android:icon="@drawable/ic_action_share" android:title="Escalate Event" android:showAsAction="always" android:titleCondensed="Escalate"></item>
     <item android:id="@+id/refresh" android:icon="@drawable/ic_action_refresh" android:title="Refresh" android:showAsAction="always"></item>
-    <item android:id="@+id/search" android:title="Search" android:icon="@drawable/ic_action_search"></item>
+    <!--<item android:id="@+id/search" android:title="Search" android:icon="@drawable/ic_action_search"></item>-->
 </menu>
