--- a/res/layout/progress_wheel.xml
+++ b/res/layout/progress_wheel.xml
@@ -5,7 +5,9 @@
 
     <ProgressBar
         android:id="@+id/progressBar1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginRight="13dp"/>
 
 </FrameLayout>
