--- a/res/layout/fragment_push_first_settings.xml
+++ b/res/layout/fragment_push_first_settings.xml
@@ -67,14 +67,14 @@
     <LinearLayout style="?android:buttonBarStyle"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:layout_alignParentBottom="true">
+                  android:layout_alignParentBottom="true"
+            >
         <Button
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/PushAddExistingButton"
                 android:id="@+id/setPushIDButton"
-                android:layout_marginLeft="@dimen/SettingsTopMargin"
                 android:layout_below="@+id/pushSummary"
                 style="?android:buttonBarButtonStyle"/>
 
