Start of NFC stuff

--- a/res/values-sw600dp/dimensions.xml
+++ b/res/values-sw600dp/dimensions.xml
@@ -7,6 +7,7 @@
     <dimen name="WelcomePadding">24dp</dimen>
     <dimen name="DeviceDetailsPadding">16dp</dimen>
 
+    <dimen name="FirstSettingsPadding">80dp</dimen>
     <!-- View Groups -->
     <integer name="GridColumns">3</integer>
 </resources>
