--- a/res/values/dimensions.xml
+++ b/res/values/dimensions.xml
@@ -5,6 +5,7 @@
     <dimen name="SettingsTopMargin">20dp</dimen>
     <dimen name="SettingEditPadding">12dp</dimen>
     <dimen name="SettingsPushETMargin">30dp</dimen>
+    <dimen name="FirstSettingsPadding">0dp</dimen>
 
     <!-- Generic List View Fragment -->
     <dimen name="ListViewPaddMarg">8dp</dimen>
