--- a/res/values-sw600dp-land/dimensions.xml
+++ b/res/values-sw600dp-land/dimensions.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="GridColumns">5</integer>
+    <dimen name="FirstSettingsPadding">200dp</dimen>
 </resources>
